2011-05-31  Roland Levillain  <roland@lrde.epita.fr>

	Add a first version of a simple 3D point predicate.

	* mln/topo/is_simple_point3d.hh: New.

2011-05-31  Roland Levillain  <roland@lrde.epita.fr>

	Generate a simple 3D points look-up table for the (26,6)-adjacency.

	* tools/Makefile.am (CLEANFILES): New.
	Add simple_point_3d_lut_26_6.txt and simple_point_3d_lut_26_6.hh.
	(simple_point_luts): New (phony) target.
	(simple_point_3d_lut_26_6.txt)
	(simple_point_3d_lut_26_6.hh):
	New targets.

2011-05-31  Roland Levillain  <roland@lrde.epita.fr>

	Parallel computation of simple 3D point look-up tables.

	* tools/simple_point_3d_lut_tbb.hh,
	* tools/simple_point_3d_lut_tbb.cc:
	New.
	* tools/Makefile.am (noinst_HEADERS): Add simple_point_3d_lut_tbb.hh.
	(EXTRA_PROGRAMS): Add simple_point_3d_lut_tbb.
	(simple_point_3d_lut_tbb_SOURCES)
	(simple_point_3d_lut_tbb_CPPFLAGS)
	(simple_point_3d_lut_tbb_LDFLAGS):
	New.

2011-05-31  Roland Levillain  <roland@lrde.epita.fr>

	Sequential computation of simple 3D points look-up tables.

	* tools/simple_point_3d_lut.hh,
	* tools/simple_point_3d_lut.cc:
	New.
	* tools/Makefile.am (noinst_HEADERS): Add simple_point_3d_lut.hh.
	(EXTRA_PROGRAMS): Add simple_point_3d_lut.
	(simple_point_3d_lut_SOURCES): New.

2013-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Improve mln::topo::is_simple_2d_t.

	* mln/topo/is_simple_2d.hh
	(mln::topo::is_simple_2d_t<N>::nb_connectivity2d):
	(mln::topo::is_simple_2d_t<N>::nb_connectivity2d__):
	Use a more reliable method to identify the neighborhood.
	* mln/topo/is_simple_point2d.hh: Typo in comment.

2013-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Reintroduce is_simple_2d and connectivity_number_2d into mln::topo.

	* mln/topo/is_simple_2d.hh (mln::topo::is_simple_2d)
	(mln::topo::connectivity_number_2d):
	New.
	* apps/generic-skel/image2d-skel.hh (is_simple_2d::operator()):
	Adjust.

2011-05-31  Roland Levillain  <roland@lrde.epita.fr>
